--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --watch --mode development",
+    "start-dev": "nodemon server.js",
+    "static-dev": "webpack --watch --mode development",
     "build": "webpack --mode production"
   },
   "author": "",
@@ -26,6 +26,7 @@
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
+    "nodemon": "^1.18.9",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.2.0"
   }
